--- a/klipy-ui/src/main/res/layout/fragment_klipy_picker.xml
+++ b/klipy-ui/src/main/res/layout/fragment_klipy_picker.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="8dp">
+    android:layout_height="match_parent">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_media_types"
@@ -21,8 +20,20 @@
             android:id="@+id/input_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Search Klipy" />
+            android:hint="Search Klipy"
+            android:imeOptions="actionSearch"
+            android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Global loading indicator for initial/refresh loads -->
+    <ProgressBar
+        android:id="@+id/progressLoading"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_gravity="center_horizontal"
+        android:visibility="gone" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_media"
